http://inter-mediator.org/
=================================

Change Log will be supplied by English only.
Latest changes might exist on the GitHub repository.
Please check: https://github.com/INTER-Mediator/INTER-Mediator
Also the Migration Guide (Japanese) might be informative:
  http://inter-mediator.info/ja/for-developers/migration.html

Ver.7 (in development)
- The FileMaker_DataAPI class updated for API protocol ver.2. And also introduced the 'portals' key on context definitions.
- CSV File uploading and add records for each line. I'd like to check the 'samples/Sample_webpage/fileuploadCSV_MySQL.html'
  file or the Sample page > JS Components > jQuery FileUploader > CSV file upload with jQuery_File_Upload.
- If setting INTERMediator.alwaysAddOperationExchange to true, the local context criteria combine logical
  expressions with ADN operator.
- The font-weight of the css * target changed from lighter to non description for adjusting the Android.
- The method INTERMediatorOnPage.doAfterDeleteRecord can define. One parameter is going to pass the context name.
- The 'ignoring-field' key can be defined in a context definition and it ignores any fields in the array value
  to check to include the field in the result.
- [BUG FIX] The variable name '$follwingTimezones' in the params.php file was typo at all!
  Change it to $followingTimezones.
- [BUG FIX] A calculation which refers to other context as like 'product@unitprice' detected wrong record.
  Now any term in expressions having 'context@field' style refers to the 'relation' setting in the context definition.
  If there is no associated record, It corrects any 'context' in the page.

Ver.6 (November 21, 2020)
- All communications went async.
- Composer/npm based library management.
- The Service Server based-on node.js is introduced, and it uses on the server-side validation so far.
- The Service Server can reboot when the version in composer.json is different.