@@ -11,6 +11,7 @@ Also the Migration Guide (Japanese) might be informative:
   http://inter-mediator.info/ja/for-developers/migration.html
 
 Ver.7 (in development)
+- The synchronizing with clients is back without Pusher.
 - The FileMaker_DataAPI class updated for API protocol ver.2. And also introduced the 'portals' key on context definitions.
 - CSV File uploading and add records for each line. I'd like to check the 'samples/Sample_webpage/fileuploadCSV_MySQL.html'
   file or the Sample page > JS Components > jQuery FileUploader > CSV file upload with jQuery_File_Upload.
@@ -20,6 +21,9 @@ Ver.7 (in development)
 - The method INTERMediatorOnPage.doAfterDeleteRecord can define. One parameter is going to pass the context name.
 - The 'ignoring-field' key can be defined in a context definition and it ignores any fields in the array value
   to check to include the field in the result.
+- The processing for 'data-im-group' attributes was eliminated in updating to Ver.6.
+  Some method handling these attributes removed.
+- The script 'dist-docs/buildup.sh' can exclude JSEncrypt and Socket.io in the generated js file.
 - [BUG FIX] The variable name '$follwingTimezones' in the params.php file was typo at all!
   Change it to $followingTimezones.
 - [BUG FIX] A calculation which refers to other context as like 'product@unitprice' detected wrong record.
